Fixed tab not showing in Tabs component (#4)

--- a/src/styles/_tabs.scss
+++ b/src/styles/_tabs.scss
@@ -63,8 +63,8 @@
     padding: $base-margin / 2;
     width: 100%;
 
-    &.active {
-      display: block;
+    &.osjs__active {
+      display: flex;
     }
   }
 }
